#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ(2.59)
AC_INIT(fossilgen, 0.1, trayc7@gmail.com)
AC_CONFIG_SRCDIR([src/fossilgen.cpp])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([1.9 foreign dist-tarZ tar-ustar filename-length-max=299])
# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX

AC_CONFIG_FILES([
	Makefile			\
	src/Makefile 
])
AC_OUTPUT
